feat: 添加使当前指向的组件更改鼠标指针样式的功能